src/main/resources/api/examples/errors/error-example-404.raml
#%RAML 1.0 NamedExample
values:
  message: Not Found
  errors:  
  - #item 1
    "code": xxx-000
    "message": |
      The requested resource could not be found but may be available again in the future. Subsequent requests by the client are permissible.